# Set standards
cmake_minimum_required(VERSION 3.2)
project(test-uvc C CXX)

# /////////////////////////////////////////////////////////////////////////////
# ////////////////////////////// PROJECT FILES ////////////////////////////////
# /////////////////////////////////////////////////////////////////////////////

file(GLOB_RECURSE MY_SOURCES src/*)

# /////////////////////////////////////////////////////////////////////////////
# /////////////////////////////// DEPENDENCIES ////////////////////////////////
# /////////////////////////////////////////////////////////////////////////////

find_package(OpenCV REQUIRED)

# ------------------------------ BUILD IF NEEDED ------------------------------

add_subdirectory(lib/libuvc)

# /////////////////////////////////////////////////////////////////////////////
# ///////////////////////////////// INCLUDES //////////////////////////////////
# /////////////////////////////////////////////////////////////////////////////

include_directories(
    ${OpenCV_INCLUDE_DIRS}
    lib/libuvc/include
    lib
    src
)

# /////////////////////////////////////////////////////////////////////////////
# /////////////////////////////////// BUILD ///////////////////////////////////
# /////////////////////////////////////////////////////////////////////////////

set(EXECUTABLE_OUTPUT_PATH bin/${CMAKE_BUILD_TYPE})
add_executable(${PROJECT_NAME} ${MY_COMMON} ${MY_SOURCES})
target_link_libraries(
    ${PROJECT_NAME}
    ${OpenCV_LIBS}
    LibUVC::UVC
)
